--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,10 @@ provider:
 functions:
   tasks:
     handler: handler.tasks
+    environment:
+      DB_HOST: ${opt:DB_HOST}
+      DB_USER: ${opt:DB_USER}
+      DB_PASSWORD: ${opt:DB_PASSWORD}
     events:
       - http:
           path: tasks
